platter-compiler-sveltejs/static/python/tests/syntax_programs/valid_tests/pre_ast_valid.platter
piece[] of a, b, c; start(){}