platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_62.platter
piece[] of integers = 1,2,3];
start(){
}